--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<!-- <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %> -->
 <%= yield %>
 
 </body>
