omniauth with facebook support

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,2 @@
-h1 Test this
-p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim facere in architecto corrupti nihil nemo nesciunt odio, sit, reiciendis, quidem perspiciatis officia excepturi ad, repellendus perferendis delectus laborum sint magni.
+h1 Hello world
+p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic dolor necessitatibus, totam, esse sit voluptatum aperiam veritatis placeat aliquam explicabo accusamus. Suscipit quos sunt dignissimos, repellat quas ab obcaecati harum.
