--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,19 +8,9 @@ html.no-js
     meta content="width=device-width, initial-scale=1" name="viewport"
     title Matt Moya
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
-    - if notice || alert
-      p.notice
-        = notice
-      p.alert
-        = alert
-    - if current_user
-      div
-        = current_user.email
-      div
-        = link_to "Logout", destroy_user_session_path, method: :delete
-    - else
-      = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+    = render 'layouts/header'
     = yield
+
+= javascript_include_tag 'application', 'data-turbolinks-track' => true
